# goit_hw-web-06

./: README.md  create_db.py  generate_data.py  pyproject.toml  query_01.sql  query_02.sql  query_03.sql  query_05.sql  query_06.sql  query_07.sql  query_08.sql  query_09.sql  query_10.sql  query_11.sql  query_12.sql  university.db
